fixed button sizing issue on mobile

--- a/style.css
+++ b/style.css
@@ -182,13 +182,13 @@ a:hover {
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin-left: 0;
+        margin-left: 80px;
     }
 
-    #button-div , #clear-input, #submit{
-        width: 100%;
+    #button-div, #clear-input, #submit{
+        width: 95%;
         margin-top: 20px;
-        margin-left: -80px;
+       margin-left: 150px;
     }
 
     #clear-input, #submit {
@@ -226,35 +226,4 @@ a:hover {
     }
 }
 
-/*TABLET*/
-@media only screen and (max-width: 768px) {
 
-    #inputRoot,
-        #inputMeaning {
-            padding-bottom: 80px;
-            display: flex;
-            align-content: flex-start;
-            justify-content: left;
-        }
-
-        #button-div,
-        #clear-input,
-        #submit {
-            width: 100%;
-            margin-top: 20px;
-            margin-left: -80px;
-        }
-
-        #clear-input,
-        #submit {
-            height: 70px;
-            font-size: 40px;
-        }
-
-        #intro,
-        #inputSection p {
-            max-width: 400px;
-            margin-left: 0px;
-        }
-
-}
